# builderone-catalog

./: .env.example  .gitignore  CLAUDE.md  OPEN_QUESTIONS.md  RUNBOOK.md  pyproject.toml
.github/workflows/: gatekeeper.yml
specs/: run-4a.md  run-4b.md
src/catalog/: __init__.py  __main__.py  batch.py  config.py
src/catalog/adapters/: __init__.py  base.py  case.py  cooler.py  cpu.py  gpu.py  motherboard.py  psu.py  ram.py  storage.py
src/catalog/models/: __init__.py  case.py  catalog.py  cooler.py  cpu.py  gpu.py  motherboard.py  psu.py  ram.py  shared.py  storage.py
src/catalog/pipeline/: __init__.py  audit.py  entity_resolution.py  reconciliation.py
src/catalog/review/: __init__.py  queue.py  telegram.py
src/catalog/store/: __init__.py  db.py  export.py
tests/: conftest.py  test_4b_m1_gpu_storage.py  test_4b_m2_ram_psu.py  test_4b_m3_case_cooler.py  test_4b_m4_full_catalog.py  test_m1_skeleton.py  test_m2_models.py  test_m3_store_export.py  test_m4_adapters.py  test_m5_er_reconciliation.py  test_m6_queue_batch_e2e.py
tests/fixtures/: case_source.txt  cooler_source.txt  cpu_source.json  gpu_source.json  mb_source.txt  psu_source.txt  ram_source.txt  storage_source.json
