[project]
name = "catalog"
version = "0.1.0"
description = "BuilderOne catalog pipeline — Run 4a vertical slice"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.4,<3",
    "instructor>=1.4.3,<2",
    "openai>=1.35.0,<2",
    "click>=8.1.7,<9",
    "httpx>=0.27.0,<1",
]

[project.scripts]
catalog = "catalog.__main__:main"

[build-system]
requires = ["hatchling>=1.24.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog"]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "ruff>=0.4.10,<1",
    "mypy>=1.10.0,<2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
